@@ -1,11 +1,13 @@
 ==================================================================================================
 Changes for 2.10
 ==================================================================================================
+- Request (831): Added support in FE code to acquire double precision 64bit floats.
+- Bug Fix (887): SDF uninitialized table did not allow accepting present settings.
 - Request (833): RCG now produces a text file that lists all ADC connections for that model as
   part of the make, make-install process.
   - make command produces build/modelepics/config/adcListSorted.txt
   - make install-model produces a /opt/rtcds/site/ifo/chans/adc/model_adclist.txt file.
-- Added RCG version number to GDSTP screens.
+- Request (886): Added RCG version number to GDSTP screens.
 - Added multi-page listing capabilities for unconnected EDCU channels. Presently, still a work
   in progress.
 - Added a new install script, nort- (No real-time). This was added to properly generate
